[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imageProcToolkit"
version = "0.1.0"
description = "Image-processing toolkit (FFT upsampling, interpolation, sub-pixel translation, co-registration)."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Yap Joon Siong"}]
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "numba",
]

# Optional GPU acceleration. cupy is NOT pulled automatically -- it is a
# machine-specific dependency (the wheel depends on your CUDA version/toolkit).
# Install the matching wheel manually, e.g. `pip install cupy-cuda13x` (or
# cupy-cuda12x / cupy-cuda11x), or run `scripts/install_cupy.py` to auto-detect
# and install the right wheel into this project's venv. The base package falls
# back to NumPy when cupy is absent.

[project.urls]
# Homepage = "https://github.com/<user>/imageProcToolkit"

[tool.setuptools.packages.find]
where = ["src"]